# phone-address-api

./: Dockerfile  LICENSE  README.md  docker-compose.yml  envexample  pyproject.toml
app/: main.py
app/api/v1/endpoints/: phone.py
app/core/: logging_config.py  redis.py  settings.py
app/models/: phone_address_schemas.py
app/schemas/: phone_address_schemas.py
app/services/: phone_services.py
scripts/: generate_data.py  migrate_data.py
tests/: conftest.py  test_api.py
